написал бизнес логику, добавил обработчик ошибок и сделал проверки